--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -172,6 +172,14 @@
    Priority plus navigation
    ========================================================================== */
 
+@font-face {
+  font-family: 'Lavishly Yours';
+  src: url('/assets/fonts/LavishlyYours-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .greedy-nav {
   position: relative;
   min-width: 250px;
@@ -182,12 +190,20 @@
   flex-wrap: wrap;
 
   .site-title {
+    font-family: 'Lavishly Yours', cursive;
+    font-size: 1.8rem;
     margin: 0 0.5rem;
-    padding: 0.5rem 0;
+    padding: 0.25rem 0;
     padding-right: 1em;
-    font-weight: 700;
+    font-weight: normal;
     color: var(--global-text-color);
     text-decoration: none;
+    line-height: 1.2;
+    white-space: nowrap;
+
+    &:hover {
+      color: var(--global-masthead-link-color-hover);
+    }
   }
 
   a {
@@ -284,6 +300,7 @@
   @media (max-width: 924px) {
     button {
       display: block;
+      margin-left: auto;
     }
 
     .visible-links {
